# invoice_generator

./: .air.toml  .gitignore  Cargo.toml  Dioxus.toml  build.zig  build.zig.zon  go.mod  makefile  readme.md
assets/css/: main.css  tailwind.css
src/: Field.zig  app.go  assert.go  components.rs  config.rs  field.zig  fonts.zig  init.go  invoice.zig  layouts.rs  main.go  main.rs  main.zig  models.rs  page_index.rs  page_invoice.rs  router.go  states.rs  util.zig  validate.rs  validate.zig  validate_item.zig  validation.zig
src/assets/fonts/: fonts.zig
src/components/: Field.zig  form_field.zig  invoice_item.zig
src/db/: context.md  customers.zig  db.go  init.zig  readme.md
src/handlers/validate/: validation.go
src/logger/: logger.go
src/models/: amounts.go  customer.go  invoice.go  product.go  supplier.go  transaction.go
src/routes/: invoice.go  product.go  validation.go
src/shared/: states.go
src/util/: shared_state.go  states.go  util.go
src/validate/: validation.go
src/web/: .gitignore  invoice.html  makefile  package.json  tailwind.config.js
src/web/components/: field.templ  field_templ.go  nav.templ  nav_templ.go  product_row.templ  product_row_templ.go  product_table.templ  product_table_templ.go
src/web/layouts/: base.templ  base_templ.go  invoice_base.templ  invoice_base_templ.go
src/web/pages/: index.templ  index_templ.go  invoice.templ  invoice_templ.go
src/web/static/css/: index.css  index.css.br  main.css  main.css.br
src/web/static/images/: logo.svg.br
src/web/static/js/: DEV_index.js  datastar.js.br  index.js
