[package]
name = "ae"
version = "0.1.0"
authors = ["Harmee Patel <harmeepatel@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
dioxus-desktop = "0.7.*"
dioxus = { version = "0.7.*", features = ["router", "fullstack"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
